# what_to_watch

./: .env.example  .gitignore  README.md  opinions_app.py  pyproject.toml  settings.py
migrations/versions/: 3ffb28149457_add_images_field.py  bce930704f38_added_added_by_field.py
opinions_app/: __init__.py  api_views.py  cli_commands.py  dropbox.py  error_handlers.py  forms.py  models.py  views.py
opinions_app/templates/: add_opinion.html  base.html  opinion.html
templates/: add_opinion.html
