[project]
name = "what-to-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask[async]==3.0.2",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "aiohttp==3.10.3",
]
